# api/index_handler.go
@@ -10,17 +10,6 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
-type MessageResponse struct {
-	Message string `json:"message"`
-}
-
-type InfoResponse struct {
-	Env       string `json:"env"`
-	Hostname  string `json:"hostname"`
-	IP        string `json:"ip"`
-	UserAgent string `json:"userAgent"`
-}
-
 // @BasePath /api
 // Welcome godoc
 // @Summary welcome message
@@ -29,11 +18,11 @@ type InfoResponse struct {
 // @Tags index
 // @Accept json
 // @Produce json
-// @Success 200 {object} MessageResponse
+// @Success 200 {object} common.MessageResponse
 // @Router /v1/index [get]
 func (server *HttpServer) index(ctx *gin.Context) {
 	msg := fmt.Sprintf("Welcome to Go starter ^^! %s", os.Getenv(common.ENVIRONMENT))
-	ctx.JSON(http.StatusOK, MessageResponse{Message: msg})
+	ctx.JSON(http.StatusOK, common.MessageResponse{Message: msg})
 }
 
 // @BasePath /api
@@ -44,11 +33,11 @@ func (server *HttpServer) index(ctx *gin.Context) {
 // @Tags index
 // @Accept json
 // @Produce json
-// @Success 200 {object} InfoResponse
+// @Success 200 {object} common.InfoResponse
 // @Router /v1/info [get]
 func (server *HttpServer) info(ctx *gin.Context) {
 	log.Info().Msgf("info API, user agent detected: %s, hostname: %s", ctx.Request.UserAgent(), ctx.Request.Host)
-	ctx.JSON(http.StatusOK, InfoResponse{
+	ctx.JSON(http.StatusOK, common.InfoResponse{
 		Env:       os.Getenv(common.ENVIRONMENT),
 		Hostname:  ctx.Request.Host,
 		IP:        ctx.ClientIP(),
